--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <p>
                   Menyediakan informasi mengenai obyek wisata yang ada di Kabupaten Gunungkidul
                 </p>
-                <a class='morebtn' href='https://fakihdzulfi2004.github.io/Explore-wonosobo/peta_wisata.html'>Explore Map</a>
+                <a class='morebtn' href="file:///E:/SEMESTER%204/internet%20uas/Peta_Wisata_GK.html">Explore Map</a>
               </div>
             </div>
           </div>
@@ -144,7 +144,7 @@
                 <p>
                   Menyediakan informasi mengenai wisata kuliner yang ada di Kabupaten Gunungkidul
                 </p>
-                <a class='morebtn' href="https://fakihdzulfi2004.github.io/explore-kab-wonosobo/peta_kuliner.html">Explore Map</a>
+                <a class='morebtn' href="file:///E:/SEMESTER%204/internet%20uas/peta%20kuliner.html">Explore Map</a>
               </div>
             </div>
           </div>
@@ -156,7 +156,7 @@
                 <p>
                   Menyediakan informasi rekomendasi hotel pilihan yang ada di Kabupaten Gunungkidul
                 </p>
-                <a class='morebtn' href="https://fakihdzulfi2004.github.io/explore-kab-wonosobo/peta_hotel.html">Explore Map</a>
+                <a class='morebtn' href="file:///E:/SEMESTER%204/internet%20uas/penginapan_gunkid.html">Explore Map</a>
               </div>
             </div>
           </div>
